--- a/customer-app/package.json
+++ b/customer-app/package.json
@@ -12,11 +12,15 @@
     "@sendgrid/mail": "^7.4.2",
     "body-parser": "^1.19.0",
     "cjs": "0.0.11",
+    "cookie-parser": "^1.4.5",
+    "debug": "^4.3.1",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "http-errors": "^1.8.0",
     "mongodb": "^3.6.5",
     "mongoose": "^5.12.2",
+    "morgan": "^1.10.0",
     "node-fetch": "^2.6.1",
     "socket.io": "^4.0.0"
   },
